--- a/css/adaptive-styles.css
+++ b/css/adaptive-styles.css
@@ -388,3 +388,127 @@ body {
   height: 56px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+/* Hero / */
+/* Section 2 */
+.work {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+.work-item-picture {
+  display: none;
+}
+.section-work {
+  display: none;
+}
+/* Section 2 / */
+
+/* Section 3 */
+.work-images {
+  display: none;
+}
+/* Section 3 / */
+
+/* Section 4 */
+.team {
+  background-color: var(--light-color);
+}
+.team-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 72px;
+}
+.team-member {
+  max-width: 264px;
+
+  background-color: var(--background-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-member:hover .social-list-link,
+.team-member:focus .social-list-link {
+  background-color: var(--pressed-color);
+}
+
+.team-content-wrapper {
+  padding: 32px 0;
+  text-align: center;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--brand-color);
+  transition: background-color var(--transition-dur-func);
+}
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--pressed-color);
+}
+.social-list-icon {
+  fill: var(--light-color);
+}
+
+/* Section 4 / */
+/* Section 5 Customers */
+.customers-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.customers-list-link {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+  width: 168px;
+  height: 88px;
+  color: var(--customers-icon-color);
+  border: 1px solid currentColor;
+  border-radius: 4px;
+  transition: border-color var(--transition-dur-func),
+    color var(--transition-dur-func);
+}
+
+@media screen and (min-width: 320px) {
+  .customers-list-item {
+    flex-basis: calc((100% - 16px) / 2);
+    max-width: 168px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .customers-list-link {
+    width: 100%;
+  }
+}
+.customers-list-link:hover,
+.customers-list-link:focus {
+  border-color: var(--pressed-color);
+  color: var(--pressed-color);
+}
+.customers-list-icon {
+  fill: currentColor;
+  transition: fill var(--transition-dur-func);
+}
+
+.customers-list-link:hover .customers-list-icon,
+.customers-list-link:focus .customers-list-icon {
+  fill: var(--pressed-color);
+}
+
+/* Section 5 Customers / */
