--- a/css/adaptive-styles.css
+++ b/css/adaptive-styles.css
@@ -271,7 +271,7 @@ body {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: #ffffff;
+    background-color: var(--background-color);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -512,3 +512,125 @@ body {
 }
 
 /* Section 5 Customers / */
+
+/* Footer */
+.footer {
+  background-color: var(--secondary-color);
+  padding: 96px 15px;
+}
+.container-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.footer-wrapper {
+  width: 268px;
+}
+.logo-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.describtion-light {
+  color: var(--light-color);
+  line-height: 1.5;
+  margin-bottom: 72px;
+}
+.logo-studio-light {
+  color: var(--light-color);
+}
+
+.social-subscribe-header {
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--background-color);
+  margin-bottom: 16px;
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 72px;
+}
+.footer-social-list-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--brand-color);
+  border-radius: 50%;
+  transition: background-color var(--transition-dur-func);
+}
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+  background-color: #31d0aa;
+}
+.footer-social-list-icon {
+  fill: var(--light-color);
+}
+.subscribe-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.subscribe-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-user-email-label {
+  display: flex;
+  width: 100%;
+}
+
+.subscribe-form-email {
+  height: 40px;
+  width: 100%;
+  padding-left: 16px;
+  border: 1px solid var(--background-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: var(--background-color);
+}
+.subscribe-form-email::placeholder {
+  color: var(--background-color);
+}
+.subscribe-form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  margin-bottom: 0;
+  height: 40px;
+  min-width: 165px;
+}
+
+.subscribe-form-btn:hover,
+.subscribe-form-btn:focus {
+  background-color: var(--pressed-color);
+}
+.subscribe-form-icon {
+  fill: var(--background-color);
+  margin-left: 16px;
+}
+/* Footer /  */
