--- a/css/adaptive-styles.css
+++ b/css/adaptive-styles.css
@@ -289,7 +289,7 @@ body {
   }
 
   .mobile-menu-open-icon {
-    stroke: #2e2f42;
+    stroke: var(--secondary-color);
   }
 }
 /* Hero */
@@ -737,3 +737,224 @@ body {
   margin-left: 16px;
 }
 /* Footer /  */
+/* Modal form and backdrop */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--transition-dur-func),
+    visibility var(--transition-dur-func);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  padding: 72px 24px 24px 24px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 392px;
+  min-height: 584px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform var(--transition-dur-func);
+}
+@media screen and (min-width: 280px) {
+  .modal {
+    width: 100%;
+    max-width: 392px;
+  }
+}
+
+.modal-close-btn {
+  position: absolute;
+  cursor: pointer;
+  padding: 0;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color var(--transition-dur-func),
+    border var(--transition-dur-func);
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: var(--pressed-color);
+  border: none;
+}
+
+.modal-close-btn-icon {
+  transition: fill var(--transition-dur-func);
+}
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--background-color);
+}
+
+/* Modal Form */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form-wrapper {
+  margin-bottom: 4px;
+}
+.modal-form-field {
+  display: block;
+}
+.modal-form-header {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
+  margin-bottom: 16px;
+}
+.modal-form-input-content {
+  position: relative;
+}
+.modal-form-input {
+  justify-content: center;
+  width: 100%;
+  height: 40px;
+  background-color: transparent;
+  outline: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+  transition: border-color var(--transition-dur-func);
+}
+.modal-form-input:focus {
+  border-color: var(--brand-color);
+}
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: var(--brand-color);
+}
+.modal-form-input-wrapper {
+  display: block;
+  position: relative;
+  margin-bottom: 8px;
+}
+.modal-form-comment-wrapper {
+  display: block;
+  margin-bottom: 16px;
+}
+.modal-form-field {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--customers-icon-color);
+  margin-bottom: 4px;
+}
+.modal-form-input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: var(--secondary-color);
+  transition: fill var(--transition-dur-func);
+}
+
+.modal-form-input-desc {
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--customers-icon-color);
+  margin-bottom: 4px;
+}
+.modal-form-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+  outline: transparent;
+  color: rgba(46, 47, 66, 0.4);
+  transition: border-color var(--transition-dur-func);
+  border: 1px solid rgba(46, 47, 66, 0.2);
+}
+.modal-form-comment:focus {
+  outline: none;
+  border-color: var(--brand-color);
+}
+.modal-form-checkbox-wrapper {
+  margin-bottom: 24px;
+}
+.modal-form-check-desc {
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--customers-icon-color);
+  margin-bottom: 24px;
+  transition: background-color var(--transition-dur-func),
+    opacity var(--transition-dur-func);
+}
+
+.modal-form-fake-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  content: '';
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: transparent;
+  border-radius: 2px;
+  margin-right: 8px;
+  transition: background-color var(--transition-dur-func),
+    border var(--transition-dur-func), fill var(--transition-dur-func);
+}
+.modal-form-fake-checkbox-icon {
+  opacity: 0;
+  transition: opacity var(--transition-dur-func);
+}
+.modal-form-check:checked + .modal-form-check-desc .modal-form-fake-checkbox {
+  background-color: var(--pressed-color);
+  border: none;
+  fill: var(--light-color);
+}
+.modal-form-check:focus-visible
+  + .modal-form-check-desc
+  .modal-form-fake-checkbox {
+  outline: 2px solid rgb(77, 90, 229, 0.3);
+  outline-offset: 1px;
+}
+
+.modal-form-check:checked
+  + .modal-form-check-desc
+  .modal-form-fake-checkbox-icon {
+  opacity: 1;
+}
+.link-policy {
+  color: var(--brand-color);
+}
+.modal-send-btn {
+  margin-bottom: 0;
+}
+
+/* Modal Form /*/
